# person-detector

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md
src/: lib.rs  main.c  main.rs  skin.c  skin.h  skin.rs  tsl.rs
