[package]
name = "person_detector"
version = "0.1.1"
edition = "2021"
authors = ["Maxim Plotnikov", "Roman Hrakin"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.0"
fast-math = "0.1.1"

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
